# CPlusPlusTrainings

./: .gitignore
MemoryManager/: .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
MemoryManager/include/: CMakeLists.txt
MemoryManager/src/: CMakeLists.txt  main.cpp
MemoryManager/test/: CMakeLists.txt
MemoryManager/test/include/: CMakeLists.txt
MemoryManager/test/src/: CMakeLists.txt
MemoryManager/test/src/unit_test/: MemoryManagerUnitTest.cpp
